prepare deploying to heroku

--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,9 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   database: majitter_production
   username: majitter
   password: <%= ENV['MAJITTER_DATABASE_PASSWORD'] %>
